feat:结构化prompt